[package]
name = "lau-stochastic-geometry"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-stochastic-geometry"
description = "Stochastic geometry for agent uncertainty — Poisson processes, random tessellations, and spatial statistics"

[dependencies]
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
statrs = "0.17"
